issue ai change
