# src/routers/categories.js
@@ -1,10 +1,11 @@
 const express = require('express');
+const { getCategory, createCategory, categories } = require('../controllers/category');
 const router = express.Router();
 
 router.use(express.json())
 
-router.get('/getCategory', (req, res)=> {
-    res.json({status: 200, message: "server is running"})
-})
+router.get('/getCategory/:id', getCategory)
+router.post("/createCategory", createCategory)
+router.get("/getCategories", categories)
 
 module.exports = router
