# src/routers/users.js
@@ -1,18 +1,19 @@
 "use strict";
 const express= require('express');
-const { loginValiator, signupValiator } = require('../config/util');
-const { login, signup, verifyToken } = require('../controllers/users');
+const { loginSchema, signupSchema, verifyOTPSchema, resendOTPSchema } = require('../middlewares/userRequestValidator');
+const { login, signup, verifyOTP, resendOTP, getuser } = require('../controllers/users');
+const { verifyToken } = require('../middlewares/tokenValidator');
+const { requestValiator } = require('../middlewares/util');
 const router= express.Router();
 
 
 router.use(express.json())
 
 
-router.post("/signup", signupValiator, signup);
-router.post("/login", loginValiator, login);
-router.post("/verifyToken", verifyToken)
-router.get('/getUsers', (req, res)=> {
-    res.json({status: 200, message: "server is running"})
-})
+router.post("/signup", signupSchema, requestValiator, signup);
+router.post("/login", loginSchema, requestValiator, login);
+router.post("/verifyOTP", verifyOTPSchema, requestValiator, verifyOTP)
+router.post("/resendOTP", resendOTPSchema, requestValiator, resendOTP)
+router.get('/getUser/:userId', verifyToken, getuser)
 
 module.exports = router
