# src/swagger.json
@@ -1,67 +1,178 @@
 {
-    "openapi": "3.0.3",
-    "info": {
-      "title": "ActOnIssue",
-      "description": "Documentation For Act On Issue",
-      "version": "1.0.11"
-    },
-    "servers": [
-      {
-        "url": "http://localhost:3000/api"
-      }
-    ],
-    "tags": [
-      {
-        "name": "user",
-        "description": "Operations about user"
-      }
-    ],
-    "paths": {
-      "/user/signup": {
-        "post": {
-          "summary": "Create user",
-          "requestBody": {
-            "required": true,
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
+  "openapi": "3.0.3",
+  "info": {
+    "title": "ActOnIssue",
+    "description": "Documentation For Act On Issue",
+    "version": "1.0.11"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:8000/api"
+    }
+  ],
+  "paths": {
+    "/user/signup": {
+      "post": {
+        "summary": "Signup",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/userSignup"
               }
             }
-          },
-          "responses": {
-            "200": {
-              "description": "OK"
-            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
     },
-    "components": {
-      "schemas": {
-        "User": {
-          "type": "object",
-          "required": [
-            "name",
-            "email/mobile"
-          ],
-          "properties": {
-            "name": {
-              "type": "string"
-            },
-            "email/mobile": {
-              "type": "string"
+    "/user/login": {
+      "post": {
+        "summary": "Signin",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/userLogin"
+              }
             }
           }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
         }
-      },
-      "securitySchemes": {
-        "api_key": {
-          "type": "apiKey",
-          "name": "api_key",
-          "in": "header"
+      }
+    },
+    "/user/verifyOTP": {
+      "post": {
+        "summary": "VerifyOTP",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/verifyOTP"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/issue/createIssue": {
+      "post": {
+        "summary": "create issue",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/createIssue"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
         }
       }
     }
+  },
+  "components": {
+    "schemas": {
+      "userSignup": {
+        "type": "object",
+        "required": [
+          "name",
+          "loginId"
+        ],
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "loginId": {
+            "type": "string"
+          }
+        }
+      },
+      "userLogin": {
+        "type": "object",
+        "required": [
+          "loginId"
+        ],
+        "properties": {
+          "loginId": {
+            "type": "string"
+          }
+        }
+      },
+      "verifyOTP": {
+        "type": "object",
+        "required": [
+          "userId",
+          "token"
+        ],
+        "properties": {
+          "userId": {
+            "type": "string"
+          },
+          "token": {
+            "type": "string"
+          }
+        }
+      },
+      "createIssue": {
+        "type": "object",
+        "required": [
+          "title",
+          "description",
+          "address",
+          "images",
+          "category"
+        ],
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "address": {
+            "type": "object"
+          },
+          "images": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "base64"
+            }
+          },
+          "category": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "securitySchemes": {
+      "api_key": {
+        "type": "apiKey",
+        "name": "api_key",
+        "in": "header"
+      }
+    }
+  }
 }
